<resources>
    <string name="app_name">BRAM</string>
    <string name="achtergrond">Achtergrond</string>
    <string name="logo_van_mijn_app">Logo van mijn app</string>
    <string name="nieuw">Nieuw</string>
    <string name="doctor">Doctor</string>
    <string name="voeg_foto_toe">Voeg foto toe</string>
    <string name="gereed">Gereed</string>
    <string name="naam">Naam</string>
    <string name="email">Email</string>
    <string name="groep">Groep</string>
    <string name="toevoegknop">toevoegKnop</string>
    <string name="telefoonnummer">Telefoonnummer</string>
    <string name="pijl_naar_links">Pijl naar links</string>
    <string name="sosknop">sosKnop</string>
    <string name="belangrijk">Belangrijk</string>
    <string name="doctors">Doctor</string>
    <string name="huisarts">Huisarts</string>
    <string name="whatsapp_icon">WhatsApp Icon</string>
    <string name="doctorse">Doctor</string>
    <string name="thuiszorgorganisaties">Thuiszorgorganisaties</string>
    <string name="whatsapp_icons">WhatsApp Icon</string>
    <string name="doctorses">Doctor</string>
    <string name="dokter">Dokter</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="favoriete">Favoriete</string>
    <string name="kleinzoon">Kleinzoon</string>
    <string name="kind">Kind</string>
    <string name="dochter">Dochter</string>
    <string name="mobile_icons">Mobile Icon</string>
    <string name="man">Man</string>
    <string name="huwelijkspartner">Huwelijkspartner</string>
    <string name="mobile_icont">Mobile Icon</string>
    <string name="schoondochter">Schoondochter</string>
    <string name="schoondochters">Schoondochter</string>
    <string name="mobile_icontj">Mobile Icon</string>
    <string name="familie">Familie</string>
    <string name="kleinzoons">Kleinzoon</string>
    <string name="mobile_icontje">Mobile Icon</string>
    <string name="overige">Overige</string>
    <string name="buurman">Buurman</string>
    <string name="buurmans">Buurman</string>
    <string name="mobile_iconjes">Mobile Icon</string>
    <string name="pijl_naar_linkss">Pijl naar links</string>
    <string name="achtergrondd">Achtergrond</string>
    <string name="logo_van_mijn_appj">Logo van mijn app</string>
    <string name="ruimtes">Ruimtes</string>
    <string name="plusje">plusje</string>
    <string name="achtergronds">Achtergrond</string>
    <string name="doctortje">Doctor</string>
    <string name="doctortjes">Doctor</string>
    <string name="wijzig">Wijzig</string>
    <string name="foto_van_een_bericht">Foto van een bericht</string>
    <string name="bericht">Bericht</string>
    <string name="foto_van_een_mobile">Foto van een mobile</string>
    <string name="bellen">Bellen</string>
    <string name="foto_van_een_mobiles">Foto van een mobile</string>
    <string name="facetime">Facetime</string>
    <string name="telefoonnummers">Telefoonnummer:</string>
    <string name="_0636644876">0636644876</string>
    <string name="zet_in_familie">Zet in familie</string>
    <string name="zet_in_belangrijk">Zet in belangrijk</string>
    <string name="zet_in_favoriete">Zet in favoriete</string>
    <string name="deel_mijn_locatie">Deel mijn locatie</string>
    <string name="blokkeer_deze_beller">Blokkeer deze beller</string>
    <string name="pijl_naar_linksj">Pijl naar links</string>
    <string name="achtergrondtj">Achtergrond</string>
    <string name="logo_van_mijn_appje">Logo van mijn app</string>
    <string name="pijl_naar_linksje">Pijl naar links</string>
    <string name="ruimtesje">Ruimtes</string>
    <string name="kleurtoon">kleurtoon</string>
    <string name="kleur_kiezen">Kleur kiezen</string>
    <string name="woonkamer">Woonkamer</string>
    <string name="slaapkamer">Slaapkamer</string>
    <string name="toilet">Toilet</string>
    <string name="verwarming">Verwarming</string>
    <string name="_23_c">23°C</string>
    <string name="thermo">thermo</string>
    <string name="_99_c">99°C</string>
    <string name="_28_c">28°C</string>
    <string name="batterij">batterij</string>
    <string name="lichten">Lichten</string>
    <string name="groen_achtergrond">groen_achtergrond</string>
    <string name="icoon_contact">icoon_contact</string>
    <string name="contacten">Contacten</string>
    <string name="zalm_achtergrond">zalm_achtergrond</string>
    <string name="tekst">tekst</string>
    <string name="roze_achtergrond">roze_achtergrond</string>
    <string name="foto_icoon">foto_icoon</string>
    <string name="fotoalbum">Fotoalbum</string>
    <string name="lamp_uit">lamp_uit</string>
    <string name="hoofdlamp">Hoofdlamp</string>
    <string name="muurlamp_1">Muurlamp-1</string>
    <string name="muurlamp_2">muurlamp-2</string>
    <string name="hoek_lamp">Hoek lamp</string>
    <string name="lamp_bij_bank">Lamp bij bank</string>
    <string name="lamp_gang">Lamp gang</string>
    <string name="Kleinzoon">Kleinzoon</string>
    <string name="info_icon">info_icon</string>
    <string name="aanpassen">Aanpassen</string>
</resources>