<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fotoalbum">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/achtergrondtj"
        android:src="@drawable/costum_background"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_van_mijn_appje"
        android:src="@drawable/bram_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plus_knop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/add_knop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/toevoegknop" />

    <androidx.cardview.widget.CardView
        android:id="@+id/foto_album_main"
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/plaatje_in_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/familie"
            android:scaleType="fitCenter"
            android:src="@drawable/familie_foto" />

    </androidx.cardview.widget.CardView>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="25dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/foto_album_main">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:baselineAligned="false"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageView-->
<!--                android:id="@+id/foto_1"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/familie_foto">-->
<!--            </ImageView>-->


<!--            <ImageView-->
<!--                android:id="@+id/foto_2"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/">-->
<!--            </ImageView>-->

<!--            <ImageView-->
<!--                android:id="@+id/foto_3"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/square_background">-->
<!--            </ImageView>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:baselineAligned="false"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageView-->
<!--                android:id="@+id/foto_4"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/square_background">-->
<!--            </ImageView>-->

<!--            <ImageView-->
<!--                android:id="@+id/foto_5"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/square_background">-->
<!--            </ImageView>-->

<!--            <ImageView-->
<!--                android:id="@+id/foto_6"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="225dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/square_background">-->
<!--            </ImageView>-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


    <ImageView
        android:id="@+id/terug_knop"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:contentDescription="@string/pijl_naar_links"
        android:src="@drawable/terug_knop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp" />

    <ImageView
        android:id="@+id/sosImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/sos"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/terug_knop"
        android:contentDescription="@string/sosknop" />

</androidx.constraintlayout.widget.ConstraintLayout>

